--- a/notebooks/r/04_DepMapValidation/02_crispr_validation.Rmd
+++ b/notebooks/r/04_DepMapValidation/02_crispr_validation.Rmd
@@ -13,6 +13,7 @@ This notebook does the following analysis:
 # 1. Load libraries
 First, let's load some essential libraries.
 ```{r}
+rm(list=ls())
 # Essential libraries
 library(tidyr)
 library(readr)
@@ -123,7 +124,35 @@ p2 = ggplot(mlt_score, aes(x=value, fill=col)) +
 grid.arrange(p1, p2)
 ```
 
-# 4. Grab NSCLC Lung Cancer Cell Line Data
+# 4. Get gene list that are universally lethal across all cell lines
+This gene list was determined from Project Score, which prioritized CRISPR Scores using the Adaptive Daisy model. The publication to reference is Behan, F. M., Iorio, F., Picco, G., Gonçalves, E., Beaver, C. M., Migliardi, G., ... & Garnett, M. J. (2019). Prioritization of cancer therapeutic targets using CRISPR–Cas9 screens. Nature, 568(7753), 511-516.
+```{r}
+project_score_file = "D:/Data/CRISPR/Score/41586_2019_1103_MOESM4_ESM/Supplementary Table 3 - Core-Fitness and Context-Specificity Summary_v2.xlsx"
+sheet_name = "Filter Genes"
+project_score = read_excel(project_score_file, sheet_name)
+```
+
+In this method, core fitness genes were scored as 0, and they were designated as high chance for false positive genes. While we can perform a more empircal analysis to determine the threshold used to filter promiscuous genes versus specific essential genes, I have used the arbitrary threshold of a score of 50 to separate out core essential versus specific genes.
+```{r}
+specific_scores = project_score[project_score$`Dependency Score` > 50, ]
+essential_scores = project_score[project_score$`Dependency Score` < 50, ]
+```
+
+Finally, I would like to see how the scores are distributed.
+```{r}
+tmp = reshape2::melt(project_score$`Dependency Score`)
+p2 = ggplot(tmp, aes(x=value)) +  
+  geom_histogram(bins=100) +
+  labs(title="Project Score distribution", 
+       x="Specificity Scores", 
+       y="Frequency") +
+  theme(legend.position="none")
+p2
+```
+
+Interestingly, most Scores are ubiquitous across all cancers. These maps will be used in the heatmaps below.
+
+# 5. Grab NSCLC Lung Cancer Cell Line Data
 The `cellmatch` dataframe contains the metadata for the `match_data`. We're interested in specifically analyzing NSCLC data.
 
 ## A. Subset the Data
@@ -139,11 +168,16 @@ unique(NSCLC_meta$primary_or_metastasis)
 tmp = NSCLC_meta %>%
   group_by(primary_or_metastasis) %>%
   count()
+
+tmp2 = cellmatch %>%
+  group_by(primary_or_metastasis) %>%
+  count()
+tmp2= tmp2[-nrow(tmp2), ]
 ```
 
 Now let's make the barplot.
 ```{r, fig.width=5, fig.height=5, dpi=100}
-p3 = ggplot(data=tmp, aes(x=primary_or_metastasis, 
+ggplot(data=tmp, aes(x=primary_or_metastasis, 
                           y=n, 
                           fill=primary_or_metastasis)) +
   geom_bar(stat="identity") +
@@ -152,7 +186,30 @@ p3 = ggplot(data=tmp, aes(x=primary_or_metastasis,
        x="Type of NSCLC cell line", 
        y="Frequency") +
   theme(legend.position="none")
-p3
+
+ggsave(filename="D:/Analysis/EMT/figures/Supporting Figures/NSCLC_Primary_v_Metastatic.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+
+ggplot(data=tmp2, aes(x=primary_or_metastasis, 
+                          y=n, 
+                          fill=primary_or_metastasis)) +
+  geom_bar(stat="identity") +
+  scale_fill_manual(values = c("Metastasis"="#EF476F", "Primary"="#073B4C")) +
+  labs(title="All Primary/Metastatic Cancer Cell Line Distribution", 
+       x="Type of NSCLC cell line", 
+       y="Frequency") +
+  theme(legend.position="none")
+
+ggsave(filename="D:/Analysis/EMT/figures/Supporting Figures/All_Primary_v_Metastatic.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
 ```
 While the data is not skewed that much, it is still notable that there are more metastatic versus primary site NSCLC cell lines in the data.
 
@@ -174,7 +231,504 @@ recon1_nsclc_ceres = NSCLC_ceres[idx, ]
 recon1_nsclc_fdr = NSCLC_fdr[idx, ]
 ```
 
-## E. Visualize the data
+# 6. Visualize NSCLC Reactions of Interest from COBRA
+Note that to translate reaction IDs --> gene IDs, I used the `findGenesFromRxns` function in the COBRA Toolbox.
+
+## A. Bulk Reaction KO Sensitive Reactions
+This module visualizes the reactions listed in the `make_manuscript_figures.Rmd` file for the bulk reaction KOs.
+
+### i. Load Data
+```{r}
+# Top 50 reaction knockouts
+top50_path = "D:/Analysis/EMT/data/top50_ko_map.csv"
+top50_map = read.csv(top50_path,
+                          header=FALSE)
+
+# High confidence knockouts
+highconf_path = "D:/Analysis/EMT/data/highconf_ko_map.csv"
+highconf_map = read.csv(highconf_path,
+                          header=FALSE)
+
+# Low confidence knockouts
+lowconf_path = "D:/Analysis/EMT/data/lowconf_ko_map.csv"
+lowconf_map = read.csv(lowconf_path,
+                          header=FALSE)
+```
+
+### ii. Get intersecting CRISPR data
+```{r}
+top50_ceres = recon1_nsclc_ceres[row.names(recon1_nsclc_ceres) %in% top50_map$V1, ]
+highconf_ceres = recon1_nsclc_ceres[row.names(recon1_nsclc_ceres) %in% highconf_map$V1, ]
+lowconf_ceres = recon1_nsclc_ceres[row.names(recon1_nsclc_ceres) %in% lowconf_map$V1, ]
+```
+
+### iii. Visualize boxplots
+In this case, I am visualizing boxplots of primary versus metastatic gene distributions that are important to this story. 
+
+Note: the horizontal line at a CERES Score = 0 denotes no essentiality. 
+```{r, fig.height=5, fig.width=10, dpi=100}
+# Top 50 Reactions
+tmp = reshape2::melt(top50_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Top 50 Reaction Knockout NSCLC CERES Score Distribution", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/top50_ko_nsclc.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+
+# Low Confidence Reactions
+tmp = reshape2::melt(lowconf_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Low Confidence Reaction Knockout NSCLC CERES Score Distribution", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/lowconf_ko_nsclc.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+```
+
+## B. Bulk Overactive Metabolic Reactions
+This module visualizes the reactions listed in the `make_manuscript_figures.Rmd` file for the overactive metabolic reactions.
+
+### i. Load Data
+```{r}
+# Top 50 reaction knockouts
+top50_path = "D:/Analysis/EMT/data/top50_flux_map.csv"
+top50_map = read.csv(top50_path,
+                     header=FALSE)
+
+# Glycolysis
+glycolysis_path = "D:/Analysis/EMT/data/glycolysis_flux_map.csv"
+glycolysis_map = read.csv(glycolysis_path,
+                          header=FALSE)
+
+# Pentose Phosphate Pathway
+ppp_path = "D:/Analysis/EMT/data/ppp_flux_map.csv"
+ppp_map = read.csv(ppp_path,
+                          header=FALSE)
+
+# Specific Reactions
+specific_path = "D:/Analysis/EMT/data/specific_flux_map.csv"
+specific_map = read.csv(specific_path,
+                          header=FALSE)
+```
+
+### ii. Get intersecting CRISPR data
+```{r}
+top50_ceres = recon1_nsclc_ceres[row.names(recon1_nsclc_ceres) %in% top50_map$V1, ]
+glycolysis_ceres = recon1_nsclc_ceres[row.names(recon1_nsclc_ceres) %in% glycolysis_map$V1, ]
+ppp_ceres = recon1_nsclc_ceres[row.names(recon1_nsclc_ceres) %in% ppp_map$V1, ]
+specific_ceres = recon1_nsclc_ceres[row.names(recon1_nsclc_ceres) %in% specific_map$V1, ]
+```
+
+### iii. Visualize heatmap
+```{r, fig.height=5, fig.width=10, dpi=100}
+# Top 50 Metabolically Active Reactions
+tmp = reshape2::melt(top50_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Top 50 NSCLC CERES Score Distribution", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/top50_flux_nsclc.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+
+# Glycolytic Reactions
+tmp = reshape2::melt(glycolysis_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Glycolysis NSCLC CERES Score Distribution", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/glycolysis_flux_nsclc.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+
+# Pentose Phosphate Pathway Reactions
+tmp = reshape2::melt(ppp_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Pentose Phosphate Pathway NSCLC CERES Score Distribution", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/ppp_flux_nsclc.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+
+# Specific Reactions
+tmp = reshape2::melt(specific_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Specific Reactions NSCLC CERES Score Distribution", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/specific_flux_nsclc.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+```
+
+## C. Single-Cell KO Sensitive Reactions
+This module visualizes the reactions listed in the `make_manuscript_figures.Rmd` file for the single-cell reaction knockouts.
+
+### i. Load Data
+```{r}
+# Top 50 reaction knockouts
+singlecell_path = "D:/Analysis/EMT/data/singlecell_ko_map.csv"
+singlecell_map = read.csv(singlecell_path,
+                          header=FALSE)
+```
+
+### ii. Get intersecting CRISPR data
+```{r}
+singlecell_ceres = recon1_nsclc_ceres[row.names(recon1_nsclc_ceres) %in% singlecell_map$V1, ]
+```
+
+### iii. Visualize heatmap
+```{r, fig.height=5, fig.width=10, dpi=100}
+tmp = reshape2::melt(singlecell_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Single-Cell KO NSCLC CERES Score Distribution", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/singlecell_ko_nsclc.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+```
+
+# 7. Visualize All CERES Score Mapped to Reactions of Interest
+## A. Bulk Reaction KO Sensitive Reactions
+This module visualizes the reactions listed in the `make_manuscript_figures.Rmd` file for the bulk reaction KOs.
+
+### i. Load Data
+```{r}
+# Top 50 reaction knockouts
+top50_path = "D:/Analysis/EMT/data/top50_ko_map.csv"
+top50_map = read.csv(top50_path,
+                          header=FALSE)
+
+# High confidence knockouts
+highconf_path = "D:/Analysis/EMT/data/highconf_ko_map.csv"
+highconf_map = read.csv(highconf_path,
+                          header=FALSE)
+
+# Low confidence knockouts
+lowconf_path = "D:/Analysis/EMT/data/lowconf_ko_map.csv"
+lowconf_map = read.csv(lowconf_path,
+                          header=FALSE)
+```
+
+### ii. Get intersecting CRISPR data
+```{r}
+top50_ceres = match_data[row.names(match_data) %in% top50_map$V1, ]
+highconf_ceres = match_data[row.names(match_data) %in% highconf_map$V1, ]
+lowconf_ceres = match_data[row.names(match_data) %in% lowconf_map$V1, ]
+```
+
+### iii. Visualize boxplots
+In this case, I am visualizing boxplots of primary versus metastatic gene distributions that are important to this story. 
+
+Note: the horizontal line at a CERES Score = 0 denotes no essentiality. 
+```{r, fig.height=5, fig.width=10, dpi=100}
+# Top 50 Reactions
+tmp = reshape2::melt(top50_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Top 50 Reaction Knockout CERES Score Distribution (All Cell Lines)", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15, 
+              alpha=0.025)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/top50_ko_all.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+
+# Low Confidence Reactions
+tmp = reshape2::melt(lowconf_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Low Confidence Reaction Knockout CERES Score Distribution (All Cell Lines)", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15, 
+              alpha=0.025)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/lowconf_ko_all.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+```
+
+## B. Bulk Overactive Metabolic Reactions
+This module visualizes the reactions listed in the `make_manuscript_figures.Rmd` file for the overactive metabolic reactions.
+
+### i. Load Data
+```{r}
+# Top 50 reaction knockouts
+top50_path = "D:/Analysis/EMT/data/top50_flux_map.csv"
+top50_map = read.csv(top50_path,
+                     header=FALSE)
+
+# Glycolysis
+glycolysis_path = "D:/Analysis/EMT/data/glycolysis_flux_map.csv"
+glycolysis_map = read.csv(glycolysis_path,
+                          header=FALSE)
+
+# Pentose Phosphate Pathway
+ppp_path = "D:/Analysis/EMT/data/ppp_flux_map.csv"
+ppp_map = read.csv(ppp_path,
+                          header=FALSE)
+
+# Specific Reactions
+specific_path = "D:/Analysis/EMT/data/specific_flux_map.csv"
+specific_map = read.csv(specific_path,
+                          header=FALSE)
+```
+
+### ii. Get intersecting CRISPR data
+```{r}
+top50_ceres = match_data[row.names(match_data) %in% top50_map$V1, ]
+glycolysis_ceres = match_data[row.names(match_data) %in% glycolysis_map$V1, ]
+ppp_ceres = match_data[row.names(match_data) %in% ppp_map$V1, ]
+specific_ceres = match_data[row.names(match_data) %in% specific_map$V1, ]
+```
+
+### iii. Visualize heatmap
+```{r, fig.height=5, fig.width=10, dpi=100}
+# Top 50 Metabolically Active Reactions
+tmp = reshape2::melt(top50_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Top 50 CERES Score Distribution (All Cell Lines)", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15, 
+              alpha=0.025)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/top50_flux_all.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+
+# Glycolytic Reactions
+tmp = reshape2::melt(glycolysis_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Glycolysis CERES Score Distribution (All Cell Lines)", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15, 
+              alpha=0.025)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/glycolysis_flux_all.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+
+# Pentose Phosphate Pathway Reactions
+tmp = reshape2::melt(ppp_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Pentose Phosphate Pathway CERES Score Distribution (All Cell Lines)", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15, 
+              alpha=0.025)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/ppp_flux_all.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+
+# Specific Reactions
+tmp = reshape2::melt(specific_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Specific Reactions CERES Score Distribution (All Cell Lines)", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15, 
+              alpha=0.025)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/specific_flux_all.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+```
+
+## C. Single-Cell KO Sensitive Reactions
+This module visualizes the reactions listed in the `make_manuscript_figures.Rmd` file for the single-cell reaction knockouts.
+
+### i. Load Data
+```{r}
+# Top 50 reaction knockouts
+singlecell_path = "D:/Analysis/EMT/data/singlecell_ko_map.csv"
+singlecell_map = read.csv(singlecell_path,
+                          header=FALSE)
+```
+
+### ii. Get intersecting CRISPR data
+```{r}
+singlecell_ceres = match_data[row.names(match_data) %in% singlecell_map$V1, ]
+```
+
+### iii. Visualize heatmap
+```{r, fig.height=5, fig.width=10, dpi=100}
+tmp = reshape2::melt(singlecell_ceres)
+ggplot(tmp, aes(x=Var1, y=value)) + 
+  geom_boxplot() + 
+  labs(title="Single-Cell KO CERES Score Distribution (All Cell Lines)", 
+       x="Metabolic genes predicted by COBRA", 
+       y="CERES Score") +
+  geom_jitter(width=0.15, 
+              alpha=0.025)+
+  theme(axis.text.x = element_text(angle=90, 
+                                   hjust=1,
+                                   vjust=0.3)) +
+  geom_hline(yintercept=0,
+             color = "red",
+             size=0.5)
+
+ggsave(filename="D:/Analysis/EMT/figures/CRISPR/singlecell_ko_all.png",
+       plot=last_plot(),
+       device=png(),
+       width=10, 
+       height=5,
+       dpi=100)
+```
+
+# 8. Visualize CERES Score Data
 Now that we have the entire subset, let's visualize the data by splitting the data between primary and metastatic cell lines. 
 
 First, we'll separate the data into metastatic and primary.
@@ -206,8 +760,21 @@ masked_prim_data = prim_data
 masked_prim_data[prim_bin] = NA
 ```
 
+Finally, filter by essential / specifically lethal.
+```{r}
+essential_met = met_data[row.names(met_data) %in% essential_scores$`HGNC Symbol`, ]
+specific_met = met_data[row.names(met_data) %in% specific_scores$`HGNC Symbol`, ]
+essential_masked_met = masked_met_data[row.names(masked_met_data) %in% essential_scores$`HGNC Symbol`, ]
+specific_masked_met = masked_met_data[row.names(masked_met_data) %in% specific_scores$`HGNC Symbol`, ]
+
+essential_prim = prim_data[row.names(prim_data) %in% essential_scores$`HGNC Symbol`, ]
+specific_prim = prim_data[row.names(prim_data) %in% specific_scores$`HGNC Symbol`, ]
+essential_masked_prim = masked_prim_data[row.names(masked_prim_data) %in% essential_scores$`HGNC Symbol`, ]
+specific_masked_prim = masked_prim_data[row.names(masked_prim_data) %in% specific_scores$`HGNC Symbol`, ]
+```
+
 ### i. Create annotation bar for primary/metastatic
-Let's create the annotation bars.
+Let's create the column annotation bars.
 ```{r}
 h1_col = HeatmapAnnotation(hm1=anno_block(gp=gpar(fill="#EF476F"),
                                       labels=c("Metastatic"), 
@@ -220,155 +787,251 @@ h2_col = HeatmapAnnotation(hm2=anno_block(gp=gpar(fill="#073B4C"),
                                                      fontsize=10)))
 ```
 
+### ii. Create annotation bar for essential/specific
+```{r}
+h1_row = rowAnnotation(hm1=anno_block(gp=gpar(fill="#EF476F"),
+                                      labels=c("Essential"), 
+                                      labels_gp=gpar(col="black", 
+                                                     fontsize=10)))
+
+h2_row = rowAnnotation(hm2=anno_block(gp=gpar(fill="#073B4C"),
+                                      labels=c("Specific"), 
+                                      labels_gp=gpar(col="white", 
+                                                     fontsize=10)))
+```
+
 ### ii. Visualize all data
 This heatmap contains all 1400+ metabolic genes across 44 cell lines.
 ```{r, fig.width=12.5, fig.height=40, fig.align='right', dpi=100}
 # Metastatic heatmap
-hm1 = Heatmap(as.matrix(met_data),
+hm1 = Heatmap(as.matrix(essential_met),
+              left_annotation=h1_row,
               na_col = "black",
               cluster_columns=FALSE,
               cluster_rows=TRUE,
-              bottom_annotation=h1_col, 
-              #width = ncol(met_data)*unit(3, "mm"), 
-              #height = nrow(met_data)*unit(3, "mm"),
+              show_row_names = FALSE,
+              show_row_dend=FALSE,
+              top_annotation=h1_col, 
+              column_names_side = "top",
+              width = ncol(essential_met)*unit(3, "mm"), 
+              height = nrow(essential_met)*unit(1, "mm"),
               show_heatmap_legend=FALSE)
-idx = row_order(hm1)
+idx1 = row_order(hm1)
 
+hm2 = Heatmap(as.matrix(specific_met),
+              left_annotation=h2_row,
+              na_col = "black",
+              cluster_columns=FALSE,
+              cluster_rows=TRUE,
+              show_row_dend=FALSE,
+              show_row_names = FALSE,
+              width = ncol(specific_met)*unit(3, "mm"), 
+              height = nrow(specific_met)*unit(1, "mm"),
+              show_heatmap_legend=FALSE,
+              show_column_names = FALSE)
+idx2 = row_order(hm2)
 
 
 # Primary heatmap
-hm2 = Heatmap(as.matrix(prim_data)[idx, ],
+hm3 = Heatmap(as.matrix(essential_prim)[idx1, ],
               na_col = "black",
               cluster_columns=FALSE, 
               cluster_rows=FALSE,
-              bottom_annotation=h2_col, 
-              #width = ncol(prim_data)*unit(3, "mm"), 
-              #height = nrow(prim_data)*unit(3, "mm"),
+              top_annotation=h2_col, 
+              column_names_side = "top",
+              width = ncol(essential_prim)*unit(3, "mm"), 
+              height = nrow(essential_prim)*unit(1, "mm"),
               heatmap_legend_param=list(title="CERES Score"))
 
-all_nsclc = hm1 + hm2
-all_nsclc
+hm4 = Heatmap(as.matrix(specific_prim)[idx2, ],
+              na_col = "black",
+              cluster_columns=FALSE, 
+              cluster_rows=FALSE,
+              width = ncol(specific_prim)*unit(3, "mm"), 
+              height = nrow(specific_prim)*unit(1, "mm"),
+              show_heatmap_legend=FALSE,
+              show_column_names = FALSE)
+
+metastatic = hm1 %v% hm2
+primary = hm3 %v% hm4
+```
+
+```{r}
+library(cowplot)
+plot_grid(hm1, hm2, hm3, hm4, ncol=2)
+lyot = grid.layout(nrow=1, ncol=2, widths=unit(0.1, "null"))
+grid.newpage()
+pushViewport(viewport(layout = lyot))
+pushViewport(viewport(layout.pos.row = 1, layout.pos.col = 1, just="bottom"))
+draw(metastatic, newpage=FALSE)
+upViewport()
+
+pushViewport(viewport(layout.pos.row = 1, layout.pos.col = 2, just="bottom"))
+draw(primary, newpage=FALSE)
+upViewport()
 ```
 
 ### iii. Visualize the signficant data only
 We'll black out the non-significant entries based on FDR > 0.05.
 ```{r, fig.width=12.5, fig.height=40, fig.align='right', dpi=100}
 # Metastatic heatmap
-col_fun = colorRamp2(c(max(masked_met_data, na.rm=TRUE), median(masked_met_data, na.rm=TRUE), min(masked_met_data, na.rm=TRUE)), 
-                     c("#FFFFF9", "#FFCE03", "#FF0000"))
-hm3 = Heatmap(as.matrix(masked_met_data)[idx, ],
+hm5 = Heatmap(as.matrix(essential_masked_met[idx1, ]),
+              left_annotation=h1_row,
               na_col = "black",
-              col=col_fun,
               cluster_columns=FALSE,
               cluster_rows=FALSE,
-              bottom_annotation=h1_col, 
-              #width = ncol(met_data)*unit(3, "mm"), 
-              #height = nrow(met_data)*unit(3, "mm"),
+              show_row_names = FALSE,
+              show_row_dend=FALSE,
+              top_annotation=h1_col, 
+              column_names_side = "top",
+              width = ncol(essential_masked_met)*unit(3, "mm"), 
+              height = nrow(essential_masked_met)*unit(1, "mm"),
               show_heatmap_legend=FALSE)
 
-# Primary heatmap
-hm4 = Heatmap(as.matrix(masked_prim_data)[idx, ],
+hm6 = Heatmap(as.matrix(specific_masked_met[idx2, ]),
+              left_annotation=h2_row,
               na_col = "black",
-              col=col_fun,
+              cluster_columns=FALSE,
+              cluster_rows=FALSE,
+              show_row_dend=FALSE,
+              show_row_names = FALSE,
+              width = ncol(specific_masked_met)*unit(3, "mm"), 
+              height = nrow(specific_masked_met)*unit(1, "mm"),
+              show_heatmap_legend=FALSE,
+              show_column_names = FALSE)
+
+
+# Primary heatmap
+hm7 = Heatmap(as.matrix(essential_masked_prim)[idx1, ],
+              na_col = "black",
               cluster_columns=FALSE, 
               cluster_rows=FALSE,
-              bottom_annotation=h2_col, 
-              #width = ncol(prim_data)*unit(3, "mm"), 
-              #height = nrow(prim_data)*unit(3, "mm"),
+              top_annotation=h2_col, 
+              column_names_side = "top",
+              width = ncol(essential_masked_prim)*unit(3, "mm"), 
+              height = nrow(essential_masked_prim)*unit(1, "mm"),
               heatmap_legend_param=list(title="CERES Score"))
 
-significant_nsclc_only = hm3 + hm4
-significant_nsclc_only
+hm8 = Heatmap(as.matrix(specific_masked_prim)[idx2, ],
+              na_col = "black",
+              cluster_columns=FALSE, 
+              cluster_rows=FALSE,
+              width = ncol(specific_masked_prim)*unit(3, "mm"), 
+              height = nrow(specific_masked_prim)*unit(1, "mm"),
+              show_heatmap_legend=FALSE,
+              show_column_names = FALSE)
+```
+
+```{r}
+#hm5
+#hm6
+#hm7
+#hm8
+metastatic = hm5 %v% hm6
+metastatic
+primary = hm7 %v% hm8
+primary
+#plot_grid(hm5, hm6, hm7, hm8, ncol=2)
+#lyot = grid.layout(nrow=1, ncol=2, widths=unit(0.1, "null"))
+grid.newpage()
+pushViewport(viewport(layout = lyot))
+pushViewport(viewport(layout.pos.row = 1, layout.pos.col = 1, just="bottom"))
+draw(metastatic, newpage=FALSE)
+upViewport()
+
+pushViewport(viewport(layout.pos.row = 1, layout.pos.col = 2, just="bottom"))
+draw(primary, newpage=FALSE)
+upViewport()
 ```
 
 ### iv. Visualize the bottom 50 metabolic genes
 Now let's zoom in on the bottom 50 metabolic genes.
 ```{r, fig.width=12.5, fig.height=15, fig.align='right', dpi=100}
-tmp1 = as.matrix(masked_met_data)[idx, ]
+tmp1 = as.matrix(essential_masked_met)[idx1, ]
 tmp1 = tmp1[(nrow(tmp1)-50):nrow(tmp1), ]
-tmp2 = as.matrix(masked_prim_data)[idx, ]
+
+tmp2 = as.matrix(specific_masked_met)[idx2, ]
 tmp2 = tmp2[(nrow(tmp2)-50):nrow(tmp2), ]
 
+tmp3 = as.matrix(essential_masked_prim)[idx1, ]
+tmp3 = tmp3[(nrow(tmp3)-50):nrow(tmp3), ]
+
+tmp4 = as.matrix(specific_masked_prim)[idx2, ]
+tmp4 = tmp4[(nrow(tmp4)-50):nrow(tmp4), ]
+
 # Metastatic heatmap
-hm5 = Heatmap(as.matrix(tmp1),
+hm9 = Heatmap(as.matrix(tmp1),
+              left_annotation=h1_row,
               na_col = "black",
-              col=col_fun,
               cluster_columns=FALSE,
               cluster_rows=FALSE,
-              bottom_annotation=h1_col, 
-              width = ncol(tmp1)*unit(5, "mm"), 
-              height = nrow(tmp1)*unit(5, "mm"),
+              show_row_names = FALSE,
+              show_row_dend=FALSE,
+              top_annotation=h1_col, 
+              column_names_side = "top",
+              width = ncol(tmp1)*unit(3, "mm"), 
+              height = nrow(tmp1)*unit(3, "mm"),
               show_heatmap_legend=FALSE)
 
+hm10 = Heatmap(as.matrix(tmp2),
+              left_annotation=h2_row,
+              na_col = "black",
+              cluster_columns=FALSE,
+              cluster_rows=FALSE,
+              show_row_dend=FALSE,
+              show_row_names = FALSE,
+              width = ncol(tmp2)*unit(3, "mm"), 
+              height = nrow(tmp2)*unit(3, "mm"),
+              show_heatmap_legend=FALSE,
+              show_column_names = FALSE)
 
 
 # Primary heatmap
-hm6 = Heatmap(as.matrix(tmp2),
+hm11 = Heatmap(as.matrix(tmp3),
               na_col = "black",
-              col=col_fun,
               cluster_columns=FALSE, 
               cluster_rows=FALSE,
-              bottom_annotation=h2_col, 
-              width = ncol(tmp2)*unit(5, "mm"), 
-              height = nrow(tmp2)*unit(5, "mm"),
+              top_annotation=h2_col, 
+              column_names_side = "top",
+              width = ncol(tmp3)*unit(3, "mm"), 
+              height = nrow(tmp3)*unit(3, "mm"),
               heatmap_legend_param=list(title="CERES Score"))
 
-top50_nsclc = hm5 + hm6
-top50_nsclc
+hm12 = Heatmap(as.matrix(tmp4),
+              na_col = "black",
+              cluster_columns=FALSE, 
+              cluster_rows=FALSE,
+              width = ncol(tmp4)*unit(3, "mm"), 
+              height = nrow(tmp4)*unit(3, "mm"),
+              show_heatmap_legend=FALSE,
+              show_column_names = FALSE)
+```
 
+```{r, fig.width=12.5, fig.height=15, fig.align='right', dpi=300}
+#hm5
+#hm6
+#hm7
+#hm8
+metastatic = hm9 %v% hm10
+metastatic
+primary = hm11 %v% hm12
+primary
+#plot_grid(hm5, hm6, hm7, hm8, ncol=2)
+lyot = grid.layout(nrow=1, ncol=2)
+grid.newpage()
+pushViewport(viewport(layout = lyot))
+pushViewport(viewport(layout.pos.row = 1, layout.pos.col = 1, just="bottom"))
+draw(metastatic, newpage=FALSE)
+upViewport()
+
+pushViewport(viewport(layout.pos.row = 1, layout.pos.col = 2, just="bottom"))
+draw(primary, newpage=FALSE)
+upViewport()
 ```
 
 Now that we have a sense of what metabolic genes are generally essential between the metastatic and primary cell lines, we'll see which ones intersect between the model predictions and the bottom 50 data.
 
 # 5. Get intersecting data with RECON1 simulations
-This section visualizes the metabolic genes that are predicted to be sensitive from gene or reaction knockout, and that have high metabolic activity.
-
-Note that to translate reaction IDs --> gene IDs, I used the `findGenesFromRxns` function in the COBRA Toolbox.
-
-## A. Bulk Reaction KO Sensitive Reactions
-This module visualizes the reactions listed in the `make_manuscript_figures.Rmd` file for the bulk reaction KOs.
-
-### i. Load Data
-```{r}
-```
-
-### ii. Get intersecting CRISPR data
-```{r}
-```
-
-### iii. Visualize heatmap
-```{r}
-```
-
-## B. Bulk Overactive Metabolic Reactions
-This module visualizes the reactions listed in the `make_manuscript_figures.Rmd` file for the overactive metabolic reactions.
-
-### i. Load Data
-```{r}
-```
-
-### ii. Get intersecting CRISPR data
-```{r}
-```
-
-### iii. Visualize heatmap
-```{r}
-```
-
-## C. Single-Cell KO Sensitive Reactions
-This module visualizes the reactions listed in the `make_manuscript_figures.Rmd` file for the single-cell reaction knockouts.
-
-### i. Load Data
-```{r}
-```
-
-### ii. Get intersecting CRISPR data
-```{r}
-```
-
-### iii. Visualize heatmap
-```{r}
-```
 
 # 7. Get differentially expressed CERES score by comparing metastatic / primary site using limma-voom
 
@@ -425,15 +1088,7 @@ head(top.table, 20)
 write.table(top.table, "clipboard", sep="\t", col.names=TRUE)
 ```
 
-# 8. Get gene list that are universally lethal across all cell lines
-This gene list was determined from Project Score. Specifically, I defined universally lethal genes that are lethal in more than 50% of the cancer cell lines out of > 300. 
-```{r}
-project_score_file = "D:/Data/CRISPR/Score/41586_2019_1103_MOESM4_ESM/Supplementary Table 3 - Core-Fitness and Context-Specificity Summary_v2.xlsx"
-sheet_name = "Filter Genes"
 
-project_score = read_excel(project_score_file, sheet_name)
-genes_to_filter = project_score[project_score$`Dependency Score` > 50, ]
-```
 
 # 9. Get differentially expressed genes for A549 from CERES score
 First, we'll get the row corresponding to the cancer cell line A549.
